removed placeholders in html weather card

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </div>
         
         <div class="weather-card">
-            <h2 class="city-title">Toronto, Canada</h2>
+            <h2 class="city-title"></h2>
             <div class="weather-logo"></div>
-            <h3 class="temperature">4&deg;C</h3>
-            <p class="weather-condition">Cloudy</p>
-            <p class="humidity">Humidity: 88%</p>
+            <h3 class="temperature"></h3>
+            <p class="weather-condition"></p>
+            <p class="humidity"></p>
         </div>
 
 
